FTB-Community/force-app/main/default/objects/FTB_User__c/FTB_User__c.object-meta.xml
<CustomObject>
    <description>FTB Object for registering users</description>
    <label>User</label>
    <nameField>
        <displayFormat>FTBUSR-{0000000}</displayFormat>
        <label>User</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>