FTB-Community/force-app/main/default/objects/FTB_User__c/fields/FTB_Language__c.field-meta.xml
<CustomField>
    <fullName>FTB_Language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FTB_Language</valueSetName>
    </valueSet>
</CustomField>