FTB-Community/force-app/main/default/objects/FTB_User__c/fields/FTB_Password__c.field-meta.xml
<CustomField>
    <fullName>FTB_Password__c</fullName>
    <label>Password</label>
    <length>40</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>