FTB-Community/force-app/main/default/objects/FTB_User__c/fields/FTB_Role__c.field-meta.xml
<CustomField>
    <fullName>FTB_Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FTB_Role</valueSetName>
    </valueSet>
</CustomField>