FTB-Community/force-app/main/default/objects/FTB_User__c/fields/FTB_Username__c.field-meta.xml
<CustomField>
    <fullName>FTB_Username__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>