FTB-Community/force-app/main/default/objects/FTB_User__c/listViews/FTB_LV_User.listView-meta.xml
<ListView>
    <fullName>FTB_LV_User</fullName>
    <columns>NAME</columns>
    <columns>FTB_Username__c</columns>
    <columns>FTB_Role__c</columns>
    <columns>FTB_Language__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Users</label>
</ListView>